# simple_particles

./: .gitignore  CMakeLists.txt
include/: glad_loader.h  renderer.h  window.h
src/: glad_loader.cpp  main.cpp  renderer.cpp  window.cpp
